--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "memory-card-game",
   "version": "0.1.0",
+  "homepage": "https://alejandroqr23.github.io/memory-card-game",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
